# iri_kinova_demos

./: CMakeLists.txt  README.md  package.xml  robots_info.txt  singleArm_bringup.launch
launch/: arduco_marker_demo1.launch  aruco_marker_finder.launch  cam.launch  config.rviz  singleArm_bringup.launch  test.launch  twoArms.launch
scripts/: 02.py  03.py  aruco_test.py  aruco_test2.py  aruco_test3.py  aruco_test4.py  aruco_test5.py  frames.gv  marker_locator.py  one.py  pick.py  testing.py  utils.py
src/: 01.cpp  03.cpp
urdf/: two_arm_robot_example_standalone.xacro
